--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             } else if (window.navigator.language == "zh-HK") {
                 document.title = "小游戏：合成金东东";
             } else if (window.navigator.language == "ko-KR") {
-                document.title = "작은 놀이：큰 수박 을 합성 하 다";
+                document.title = "작은 놀이：김동현";
             } else if (window.navigator.language == "ja-JP") {
-                document.title = "ミニゲーム：合成スイカ";
+                document.title = "ミニゲーム：合成김동현";
             } else if (window.navigator.language == "th-TH") {
                 document.title = "เกมเล็กๆ：แตงโมสังเคราะห์";
             } else {
